--- a/themes/coder-portfolio/layouts/_default/baseof.html
+++ b/themes/coder-portfolio/layouts/_default/baseof.html
@@ -29,6 +29,7 @@
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700">
     <link rel="stylesheet" href="{{ "css/normalize.min.css" | relURL }}">
     <link rel="stylesheet" href="{{ "css/style.min.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/customize.css" | relURL }}">
 
     {{ if .Site.Params.rtl}}
       <link rel="stylesheet" href="{{ "css/style-rtl.min.css" | relURL }}">
